--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
+# Laravel Tutorial
+
+## Docker-Umgebung
 https://www.digitalocean.com/community/tutorials/how-to-containerize-a-laravel-application-for-development-with-docker-compose-on-ubuntu-18-04-de
+
+## Laracast
+https://laracasts.com/series/laravel-6-from-scratch
+
