--- a/readme
+++ b/readme
@@ -52,3 +52,7 @@ in dem Beispiel unten wird beispielsweise ein DB-Eintrag gemacht.
 Keine Ahnung, ob man das braucht...!
 
 ### Episode 14 - Layout Pages
+
+### Episode 15 - Site Template
+
+### Episode 15 - Set active menu link
